# gamejam-base

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
